--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="assets/dist/css/bootstrap.css">
+  <link href="./node_modules/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <app-root></app-root>
